community-modules/core/src/styles/ag-grid.scss
/* ... */
.ag-rich-select-row {
    display: flex;
    flex: 1 1 auto;
    align-items: center;
    white-space: nowrap;
}

/**
 ****************************
 * Pagination
 ****************************
*/
.ag-paging-panel {
    align-items: center;
    display: flex;
    justify-content: flex-end;
}

.ag-paging-page-summary-panel {
    display: flex;
    align-items: center;
}

.ag-paging-button-wrapper {
    position: relative;
    overflow: hidden;
}

.ag-paging-button {
    position: absolute;
}

.ag-disabled .ag-paging-page-summary-panel {
    pointer-events: none;
}

/**
 ****************************
 * Tool Panel
 ****************************
*/
.ag-tool-panel-wrapper {
    display: flex;
    overflow-y: auto;
    cursor: default;
    user-select: none;
    width: 200px;
}

.ag-column-select-column,
.ag-column-select-column-group {
    align-items: center;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.ag-column-select-checkbox {
    display: flex;
}

.ag-tool-panel-horizontal-resize {
    cursor: col-resize;
    height: 100%;
    position: absolute;
    top: 0;
    width: 5px;
    z-index: 1;
}

.ag-side-bar-left .ag-tool-panel-horizontal-resize {
    @include ag-unthemed-rtl(( right: -3px ));
}

.ag-side-bar-right .ag-tool-panel-horizontal-resize {
    @include ag-unthemed-rtl(( left: -3px ));
}

.ag-details-row {
    height: 100%;
    width: 100%;
}

.ag-details-grid {
    height: 100%;
    width: 100%;
}

.ag-header-group-cell {
    display: flex;
    align-items: center;
    height: 100%;
    position: absolute;
}

.ag-cell-label-container {
    display: flex;
    justify-content: space-between;
    flex-direction: row-reverse;
    align-items: center;
    width: 100%;
    height: 100%;
}

.ag-numeric-header .ag-cell-label-container {
    flex-direction: row;
}

/**
 ****************************
 * Side Bar
 ****************************
*/
.ag-side-bar {
    display: flex;
    flex-direction: row-reverse;
}

.ag-side-bar-left {
    order: -1;
    flex-direction: row;
}

.ag-side-button-button {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-wrap: nowrap;
    white-space: nowrap;
    outline: none;
    cursor: pointer;
}

.ag-side-button-label {
    writing-mode: vertical-lr;
}

/**
 ****************************
 * Status Bar
 ****************************
*/
.ag-status-bar {
    display: flex;
    justify-content: space-between;
    overflow: hidden;
}

.ag-status-panel {
    display: inline-flex;
}

.ag-status-name-value {
    white-space: nowrap;
}

.ag-status-bar-left {
    display: inline-flex;
}

.ag-status-bar-center {
    display: inline-flex;
}

.ag-status-bar-right {
    display: inline-flex;
}

/**
 ****************************
 * Widgets
 ****************************
*/


.ag-icon {
    display: block;
    speak: none;
}

.ag-group {
    position: relative;
    width: 100%;
}

.ag-group-title-bar,
.ag-group-title {
    display: flex;
    align-items: center;
}

.ag-group-toolbar {
    display: flex;
    align-items: center;
}

.ag-group-container {
    display: flex;
}

.ag-disabled .ag-group-container {
    pointer-events: none;
}

.ag-group-container-horizontal {
    flex-direction: row;
    flex-wrap: wrap;
}

.ag-group-container-vertical {
    flex-direction: column;
}

.ag-charts-font-size-color {
    display: flex;
    align-self: stretch;
    justify-content: space-between;
}

.ag-column-group-icons {
    display: block;
}

.ag-group-item-alignment-stretch .ag-group-item {
    align-items: stretch;
}

.ag-group-item-alignment-start .ag-group-item {
    align-items: flex-start;
}

.ag-group-item-alignment-end .ag-group-item {
    align-items: flex-end;
}

.ag-toggle-button-icon {
    transition: right 0.3s;
    position: absolute;
    top: -1px;
}

.ag-input-field, .ag-select {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.ag-input-field-input {
    flex: 1 1 auto;
    width: 100%;
    min-width: 0;
}

.ag-range-field {
    display: flex;
    align-items: center;
}

.ag-angle-select {
    display: flex;
    align-items: center;
}

.ag-angle-select-wrapper {
    display: flex;
}

.ag-angle-select-parent-circle {
    display: block;
    position: relative;
}
.ag-angle-select-child-circle {
    position: absolute;
}



.ag-slider-wrapper {
    display: flex;
}

.ag-slider-wrapper {
    .ag-input-field {
        flex: 1 1 auto;
    }
}

.ag-picker-field-display {
    flex: 1 1 auto;
}

.ag-picker-field {
    display: flex;
    align-items: center;
}

.ag-picker-field-icon {
    display: flex;
    border: 0;
    padding: 0;
    margin: 0;
    cursor: pointer;
}

.ag-picker-field-wrapper {
    overflow: hidden;
}

.ag-label-align-right {
    .ag-label {
        order: 1;
    }
    > * {
        flex: none;
    }
}

.ag-label-align-top {
    flex-direction: column;
    align-items: flex-start;
    > * {
        align-self: stretch;
    }
}

.ag-color-panel {
    width: 100%;
    display: flex;
    flex-direction: column;
    text-align: center;
}

.ag-spectrum-color {
    flex: 1 1 auto;
    position: relative;
    overflow: hidden;
    cursor: default;
}

.ag-spectrum-fill {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.ag-spectrum-val {
    cursor: pointer;
}

.ag-spectrum-dragger {
    position: absolute;
    pointer-events: none;
    cursor: pointer;
}

.ag-spectrum-hue {
    cursor: default;
    background: linear-gradient(to left,
        #ff0000 3%, #ffff00 17%,
        #00ff00 33%, #00ffff 50%,
        #0000ff 67%, #ff00ff 83%,
        #ff0000 100%
    );
}

.ag-spectrum-alpha {
    cursor: default;
}

.ag-spectrum-hue-background {
    width: 100%;
    height: 100%;
}

.ag-spectrum-alpha-background {
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(0, 0, 0));
    width: 100%;
    height: 100%;
}

.ag-spectrum-tool {
    cursor: pointer;
}
/* ... */

